--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@angular/cli": "1.1.3",
     "@angular/compiler-cli": "^4.0.0",
     "@angular/language-service": "^4.0.0",
+    "@types/file-saver": "0.0.1",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
     "codelyzer": "~3.0.1",
